--- a/app/src/main/res/layout/ping_state_view.xml
+++ b/app/src/main/res/layout/ping_state_view.xml
@@ -8,6 +8,7 @@
         android:id="@+id/ping_text_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
         android:layout_alignParentStart="true"
         android:textSize="10sp"
         tools:text="ping text"/>
@@ -16,8 +17,9 @@
         android:id="@+id/ping_time_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingRight="10dp"
         android:layout_alignParentEnd="true"
-        android:textSize="15sp"
+        android:textSize="10sp"
         tools:text="ping time"/>
 
 </merge>
