--- a/app/src/main/res/layout/peer_device_view.xml
+++ b/app/src/main/res/layout/peer_device_view.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:drawable/alert_light_frame"
     android:gravity="center_vertical"
     android:minHeight="70dp">
 
@@ -19,6 +18,7 @@
         android:id="@+id/device_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="10sp"
         android:layout_marginLeft="5dp"
         android:layout_toRightOf="@id/device_status"
         android:gravity="center"
